Insert link to external CSS file

--- a/recipes/blackberry-mousse-tart.html
+++ b/recipes/blackberry-mousse-tart.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Blackberry Mousse Tart</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -12,19 +13,19 @@
         <img src="../images/img-blackberry-mousse-tart.png" alt="purple tart with black crust, topped with blackberries, peaches, and lilacs">
 
         <h2>Vegan, no-bake, and easy to make!</h2>
-        <p>This delicious <strong>vegan</strong> blackberry mousse tart is everything you could want in simple dessert!</p>
+        <p>This delicious <strong class="bold">vegan</strong> blackberry mousse tart is everything you could want in simple dessert!</p>
         <p>With a creamy blackberry and blueberry based mousse filling, and a no-bake oreo crust, this tart is sure to be a hit with everyone!</p>
 
         <h3>Ingredients</h3>
         <ul>
             <li>320g oreo cookies</li>
-            <li>80g melted vegan butter</li>
+            <li class="vegan">80g melted vegan butter</li>
             <li>225g blackberries and blueberries</li>
-            <li>225g vegan cream cheese</li>
+            <li class="vegan italics">225g vegan cream cheese</li>
             <li>75g sugar</li>
             <li>2 tsp vanilla extract</li>
             <li>240ml chilled coconut cream</li>
-            <li>60ml vegan milk</li>
+            <li class="vegan">60ml vegan milk</li>
             <li>1 tsp agar powder</li>
         </ul>
 
@@ -35,16 +36,16 @@
             <li>Add oreos into blender until finely ground</li>
             <li>Mix melted butter with crumbs</li>
             <li>Press mixture into the tart pan</li>
-            <li>Place in freezer for 15 minutes to firm up</li>
+            <li class="fridge">Place in freezer for 15 minutes to firm up</li>
         </ol>
 
         <h4>Filling</h4>
         <ol>
             <li>Add berries, cream cheese, sugar, and vanilla to blender, and blend until smooth</li>
-            <li>Whip coconut cream until stiff peaks form, and refrigerate until ready for use</li>
+            <li class="fridge">Whip coconut cream until stiff peaks form, and refrigerate until ready for use</li>
             <li>In a saucepan, mix agar-agar into vegan milk, and bring to a boil until cooked</li>
             <li>Fold agar-agar mixture into berry puree mix, then fold in the whipped coconut cream</li>
-            <li>Pour mixture into tart pan and refrigerate overnight to firm up</li>
+            <li class="fridge">Pour mixture into tart pan and refrigerate overnight to firm up</li>
             <li>Decorate tart with berries, flowers, whipped cream, nuts, or other toppings!</li>
         </ol>
     </body>
