Insert link to external CSS file

--- a/recipes/mango-passion-fruit-cheesecake.html
+++ b/recipes/mango-passion-fruit-cheesecake.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Mango Passion Fruit Cheesecake</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -13,14 +14,14 @@
 
         <h2>Creamy, vegan, and perfect for the summer!</h2>
         <p>This light, yet creamy cheesecake is so easy to make!</p>
-        <p>It can even be frozen and tastes <em>just like an ice cream cake!</em></p>
+        <p>It can even be frozen and tastes <em class="italics">just like an ice cream cake!</em></p>
 
         <h3>Ingredients</h3>
         <ul>
-            <li>200g vegan butter cookies</li>
-            <li>115g vegan butter</li>
+            <li class="vegan">200g vegan butter cookies</li>
+            <li class="vegan">115g vegan butter</li>
             <li>250g mango</li>
-            <li>250g vegan cream cheese</li>
+            <li class="vegan italics">250g vegan cream cheese</li>
             <li>75g sugar</li>
             <li>200ml coconut cream</li>
             <li>80ml full fat coconut milk</li>
@@ -37,7 +38,7 @@
             <li>Blend cookies until finely ground</li>
             <li>Add melted vegan butter and mix thoroughly</li>
             <li>Press mixture onto bottom of your pan</li>
-            <li>Refrigerate for at least 15 minutes to firm up</li>
+            <li class="fridge">Refrigerate for at least 15 minutes to firm up</li>
         </ol>
 
         <h4>Filling</h4>
@@ -48,7 +49,7 @@
             <li>Remove from heat and stir in 2-3 tablespoons of mango cream mixture</li>
             <li>Gently fold in remaining mango cream into agar-agar mixture</li>
             <li>Gently fold in whipped cream into the mixture and fill cookie crust</li>
-            <li>Refrigerate overnight to firm up</li>
+            <li class="fridge">Refrigerate overnight to firm up</li>
             <li>Stir cornstarch into water with passion fruit pulp and sugar</li>
             <li>Place over medium heat until mixture boils and thickens</li>
             <li>Once the cheesecake has firmed up, pour passion fruit sauce evenly over</li>
