--- a/recipes/raspberry-chocolate-hazelnut-tart.html
+++ b/recipes/raspberry-chocolate-hazelnut-tart.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Raspberry Chocolate Hazelnut Tart</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
 
@@ -22,10 +23,10 @@
             <li>125g all purpose flour</li>
             <li>25g coconut sugar</li>
             <li>0.5 tsp salt</li>
-            <li>115g vegan butter</li>
+            <li class="vegan">115g vegan butter</li>
             <li>14g cornstarch</li>
             <li>480ml coconut milk</li>
-            <li>225g vegan nutella</li>
+            <li class="vegan">225g vegan nutella</li>
             <li>1 tsp vanilla extract</li>
             <li>1 cup raspberries</li>
             <li>180g coconut cream</li>
@@ -49,7 +50,7 @@
             <li>Whisk cornstarch and 1/3 cup coconut milk, and set aside</li>
             <li>Heat the rest of the coconut milk with the nutella, and vanilla in a saucepan and whisk to combine</li>
             <li>When the mixture starts to boil, whisk in cornstarch mixture and cook for 2 to 3 minutes until thickened</li>
-            <li>Pour mixture into crust and refrigerate overnight</li>
+            <li class="fridge">Pour mixture into crust and refrigerate overnight</li>
             <li>Top with chocolate ganache, raspberries, and toasted hazelnuts</li>
         </ol>
 
