--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Vegan Desserts!</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Vegan Desserts!</h1>
+        <h1 id="title">Vegan Desserts!</h1>
 
-        <ul>
-        <li><a href="./recipes/blackberry-mousse-tart.html">Blackberry Mousse Tart</a></li>
-        <li><a href="./recipes/mango-passion-fruit-cheesecake.html">Mango Passion Fruit Cheesecake</a></li>
-        <li><a href="./recipes/raspberry-chocolate-hazelnut-tart.html">Raspberry Chocolate Hazelnut Tart</a></li>
-        </ul>
+        <button><a href="./recipes/blackberry-mousse-tart.html">Blackberry Mousse Tart</a></button>
+        <button class="choco"><a href="./recipes/raspberry-chocolate-hazelnut-tart.html">Raspberry Chocolate Hazelnut Tart</a></button>
+        <button><a href="./recipes/mango-passion-fruit-cheesecake.html">Mango Passion Fruit Cheesecake</a></button>
+        
     </body>
 
 </html>
